# slc_-sys-y_-language_-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  代码提交.txt
doc/2021第二次技术培训资料/: 北航编译课程简介2021.pptx  指令调度算法简介.pptx
doc/old_test/functional_test/: 01_var_defn.sy
lib/: sylib.c
src/: main.cpp
src/ast/: Ast.cpp  Ast.hpp  CMakeLists.txt  JsonGen.cpp  JsonGen.hpp  Type.hpp
src/codegen/: AsmCodeGen.cpp  AsmCodeGen.hpp  CMakeLists.txt  InsAsmCode.cpp  InsAsmCode.hpp  RegAlloc.cpp
src/codegen/test_ir/: AsmCodeGen_my.cpp  gen_ir_gest.cpp  test.c  test.ll  test.txt  test_2.c  test_2.ll
src/front/: CMakeLists.txt  Driver.cpp  Driver.hpp  lexer.cpp  location.hh  parser.cpp  parser.hpp  position.hh  pre.cpp  pre.hpp  scanner.hpp  stack.hh
src/front/flex_bison/: CMakeLists.txt  bison.y  flex.l
src/ir/: Block.cpp  Block.hpp  CMakeLists.txt  Const.cpp  Const.hpp  Function.cpp  Function.hpp  Instruction.cpp  Instruction.hpp  Ir.cpp  Ir.hpp  IrGen.cpp  IrGen.hpp  Module.hpp  Scope.hpp  Value.hpp  Variable.cpp  Variable.hpp
test/: csc-1.s  csc.s  test copy.c  test.c  test.out  test.out.json  test.txt
